--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.1.3
   firebase_core: ^1.7.0
+  google_fonts: ^2.1.0
+  cloud_firestore: ^2.5.3
 
 dev_dependencies:
   flutter_test:
